--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "start": "node server.js",
     "dev": "nodemon --exec ts-node src/server.ts",
-    "build": "tsc --build"
+    "build": "tsc --build",
+    "test": "jest -c jest.config.js --forceExit --"
   },
   "repository": {
     "type": "git",
@@ -23,6 +24,7 @@
     "passport-jwt": "^4.0.0"
   },
   "devDependencies": {
+    "@babel/preset-typescript": "^7.13.0",
     "@types/bcrypt": "^3.0.1",
     "@types/cors": "^2.8.10",
     "@types/dotenv": "^8.2.0",
@@ -34,9 +36,14 @@
     "@types/node": "^15.0.1",
     "@types/passport": "^1.0.6",
     "@types/passport-jwt": "^3.0.5",
+    "@types/supertest": "^2.0.11",
     "dotenv": "^8.2.0",
+    "husky": "^6.0.0",
     "jest": "^26.6.3",
+    "mock-mongoose": "^8.0.1-a",
     "nodemon": "^2.0.7",
+    "supertest": "^6.1.3",
+    "ts-jest": "^26.5.5",
     "ts-node": "^9.1.1",
     "typescript": "^4.2.4"
   }
