--- a/.github/workflows/workflows.yml
+++ b/.github/workflows/workflows.yml
@@ -20,3 +20,6 @@ jobs:
         node-version: ${{ matrix.node-version }}
     - run: yarn install
     - run: yarn test
+      env: 
+        JWT_SECRET_KEY: ${{ secrets.JWT_SECRET_KEY }}
+        DB_EMPLOYEES_URL: ${{ secrets.DB_EMPLOYEES_URL }}
