--- a/.github/workflows/workflows.yml
+++ b/.github/workflows/workflows.yml
@@ -22,4 +22,4 @@ jobs:
     - run: yarn test
       env: 
         JWT_SECRET_KEY: ${{ secrets.JWT_SECRET_KEY }}
-        DB_EMPLOYEES_URL: ${{ secrets.DB_EMPLOYEES_URL }}
+        DB_EMPLOYEE_URL: ${{ secrets.DB_EMPLOYEE_URL }}
