--- a/package.json
+++ b/package.json
@@ -7,11 +7,16 @@
     "start": "node server.js",
     "dev": "nodemon --exec ts-node src/server.ts",
     "build": "tsc --build",
-    "test": "jest -c jest.config.js --forceExit --"
+    "test": "jest -c jest.config.js"
   },
   "repository": {
     "type": "git",
     "url": "https://github.com/HyperTHD/BTS530-TS-Backend"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "pretty-quick --staged"
+    }
   },
   "dependencies": {
     "bcrypt": "^5.0.1",
@@ -40,7 +45,7 @@
     "dotenv": "^8.2.0",
     "husky": "^6.0.0",
     "jest": "^26.6.3",
-    "mock-mongoose": "^8.0.1-a",
+    "mongodb-memory-server": "^6.9.6",
     "nodemon": "^2.0.7",
     "supertest": "^6.1.3",
     "ts-jest": "^26.5.5",
