--- a/package.json
+++ b/package.json
@@ -1,13 +1,14 @@
 {
   "name": "BTS530-Backend-TS",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "src/server.ts",
   "license": "MIT",
   "scripts": {
     "start": "node server.js",
     "dev": "nodemon --exec ts-node src/server.ts",
     "build": "tsc --build",
-    "test": "jest -c jest.config.js"
+    "test": "jest -c jest.config.js",
+    "coverage": "jest -c jest.config.js --coverage"
   },
   "repository": {
     "type": "git",
@@ -15,7 +16,7 @@
   },
   "husky": {
     "hooks": {
-      "pre-commit": "pretty-quick --staged"
+      "prepare": "husky install"
     }
   },
   "dependencies": {
